Cleaned test_vaebm.py

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ results/model0.ckpt
 results/model_version.txt
 *.jpg
 *.ckpt
+*.pyc
+data_batch*
+*.json
+*.gz
+*.meta
+vae/disvae/__pycache__/evaluate.cpython-36.pyc
+vae/disvae/__pycache__/training.cpython-36.pyc
+vae/disvae/models/__pycache__/discriminator.cpython-36.pyc
+vae/disvae/models/__pycache__/vae.cpython-36.pyc
+vae/disvae/models/__pycache__/losses.cpython-36.pyc
+vae/disvae/utils/__pycache__/modelIO.cpython-36.pyc
+vae/disvae/__pycache__/__init__.cpython-36.pyc
+conv_resnet_model.py
+DCGAN_VAE_logistic.py
+train_latentEBM_conv.py
